objects/ssot__ChangeRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssignedGroupId__c</fullName>
        <label>Assigned Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedUserId__c</fullName>
        <label>Assigned User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessJustificationText__c</fullName>
        <label>Business Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CalculatedRiskScoreNumber__c</fullName>
        <label>Calculated Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestBusinessReason__c</fullName>
        <label>Change Request Business Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestCategory__c</fullName>
        <label>Change Request Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestClosedStatus__c</fullName>
        <label>Change Request Closed Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestImpact__c</fullName>
        <label>Change Request Impact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestNumber__c</fullName>
        <label>Change Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestPriority__c</fullName>
        <label>Change Request Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestRiskLevel__c</fullName>
        <label>Change Request Risk Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestStatusCategory__c</fullName>
        <label>Change Request Status Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestStatus__c</fullName>
        <label>Change Request Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestSubCategory__c</fullName>
        <label>Change Request Sub Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestType__c</fullName>
        <label>Change Request Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestUrgency__c</fullName>
        <label>Change Request Urgency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequest_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequest_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ChangeRequest_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ChangeRequest_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequest_ReviewerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequest_ReviewerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ChangeRequest_ReviewerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ChangeRequest_ReviewerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClosedDateTime__c</fullName>
        <label>Closed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClosedStatusCommentText__c</fullName>
        <label>Closed Status Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EntitlementProcessEndDateTime__c</fullName>
        <label>Entitlement Process End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EntitlementProcessStartDateTime__c</fullName>
        <label>Entitlement Process Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedEndTime__c</fullName>
        <label>Estimated End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedStartTime__c</fullName>
        <label>Estimated Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FinalReviewDateTime__c</fullName>
        <label>Final Review Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FinalReviewNotesText__c</fullName>
        <label>Final Review Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Change Request Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImplementationPlanDescription__c</fullName>
        <label>Implementation Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPaused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneStatusText__c</fullName>
        <label>Milestone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PauseStartDateTime__c</fullName>
        <label>Pause Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RemediationPlanText__c</fullName>
        <label>Remediation Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportedById__c</fullName>
        <label>Reported By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerId__c</fullName>
        <label>Reviewer By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RiskImpactAnalysisText__c</fullName>
        <label>Risk Impact Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEntitlementId__c</fullName>
        <label>Service Entitlement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TestPlanDescription__c</fullName>
        <label>Test Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009468139_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequest_OwnerId_map_UserGroup__rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>ChangeRequest_OwnerId_map_UserGroup__rel</relationshipLabel>
        <relationshipName>rel_1702009468139_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>